--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ install:
   - nuget install NUnit.Runners -Version 3.4.1 -OutputDirectory testrunner
 script:
   - xbuild /p:Configuration=Release BinaryEncoding.sln
-  - mono ./testrunner/NUnit.Runners.3.4.1/tools/nunit3-console.exe ./BinaryEncoding.Tests/bin/Release/BinaryEncoding.Tests.dll
+  - mono ./testrunner/NUnit.ConsoleRunner.3.4.1/tools/nunit3-console.exe ./BinaryEncoding.Tests/bin/Release/BinaryEncoding.Tests.dll
