hopefully fixed a bug where reading from a stream read too much

--- a/BinaryEncoding.Tests/BinaryEncoding.Tests.csproj
+++ b/BinaryEncoding.Tests/BinaryEncoding.Tests.csproj
@@ -45,6 +45,9 @@
     <Compile Include="BinaryTests.LittleEndian.cs">
       <DependentUpon>BinaryTests.cs</DependentUpon>
     </Compile>
+    <Compile Include="BinaryTests.Stream.cs">
+      <DependentUpon>BinaryTests.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
