--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,5 @@
 environment:
-  PKG_VERSION: 1.3.0
+  PKG_VERSION: 1.3.1
   VERSION_SUFFIX: ""
 version: ${PKG_VERSION}-{build}
 configuration: Release
@@ -37,7 +37,7 @@ init:
   #- git submodule update --init --recursive
 
 before_build:
-  - appveyor-retry dotnet restore -v Minimal --runtime win10-x64
+  - appveyor-retry dotnet restore -v Minimal
 
 build_script:
   - ps: |
