--- a/src/BinaryEncoding/BinaryEncoding.csproj
+++ b/src/BinaryEncoding/BinaryEncoding.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFrameworks>netstandard1.6;net461</TargetFrameworks>
+    <RuntimeIdentifiers>win-x64;win-x86;osx-x64;osx-x86;ubuntu-x64;ubuntu-x86</RuntimeIdentifiers>
     <DebugType>full</DebugType>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <DefineConstants>$(DefineConstants);UNSAFE</DefineConstants>
@@ -15,7 +16,9 @@
     <releaseNotes></releaseNotes>
     <copyright>Copyright 2017</copyright>
     <PackageTags>Binary Encoding BigEndian LittleEndian Varint</PackageTags>
-    <VersionPrefix>1.3.0</VersionPrefix>
+    <VersionPrefix>1.3.1</VersionPrefix>
+    <GenerateRuntimeConfigurationFiles>true</GenerateRuntimeConfigurationFiles>
+    <PackageTargetFallback Condition=" '$(TargetFramework)' == 'net461' ">$(PackageTargetFallback);netstandard;portable-net461+win8</PackageTargetFallback>
   </PropertyGroup>
 
 </Project>
