--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,4 +5,4 @@ jobs:
       - image: microsoft/dotnet:2.0-sdk
     steps:
       - checkout
-      - run: dotnet test test/BinaryEncoding.Tests/BinaryEncoding.Tests.csproj
+      - run: dotnet test -f netcoreapp1.1 test/BinaryEncoding.Tests/BinaryEncoding.Tests.csproj
