--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,14 @@ version: 2
 jobs:
   build:
     docker:
-      - image: microsoft/dotnet:2.0-sdk
+      - image: microsoft/dotnet:1.1-sdk
     steps:
       - checkout
       - run: dotnet test -f netcoreapp1.1 test/BinaryEncoding.Tests/BinaryEncoding.Tests.csproj
+  build:
+    docker:
+      - image: microsoft/dotnet:2.0-sdk
+    steps:
+      - checkout
+      - run: dotnet test -f netcoreapp2.0 test/BinaryEncoding.Tests/BinaryEncoding.Tests.csproj
+
