--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,7 +6,7 @@ configuration: Release
 platform: x64
 
 skip_commits:
-  message: /travis/
+  message: /chore/
   files:
     - '**\*.md'
     - LICENSE
