fix: comment out fallback
License: MIT
Signed-off-by: Trond Bråthen <tabrath@gmail.com>

--- a/src/BinaryEncoding/BinaryEncoding.csproj
+++ b/src/BinaryEncoding/BinaryEncoding.csproj
@@ -17,7 +17,7 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <OutputType>Library</OutputType>
     <LangVersion>latest</LangVersion>
-    <PackageTargetFallback Condition=" '$(TargetFramework)' == 'net452' ">$(PackageTargetFallback);netstandard;portable-net452+win8</PackageTargetFallback>
+    <!--<PackageTargetFallback Condition=" '$(TargetFramework)' == 'net452' ">$(PackageTargetFallback);netstandard;portable-net452+win8</PackageTargetFallback>-->
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
