--- a/src/BinaryEncoding/BinaryEncoding.csproj
+++ b/src/BinaryEncoding/BinaryEncoding.csproj
@@ -1,4 +1,5 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+  <Import Project="..\..\netfx.props" />
 
   <PropertyGroup>
     <TargetFramework>netstandard1.1</TargetFramework>
