additional target framework, sigh
License: MIT
Signed-off-by: Trond Bråthen <tabrath@gmail.com>

--- a/src/BinaryEncoding/BinaryEncoding.csproj
+++ b/src/BinaryEncoding/BinaryEncoding.csproj
@@ -2,7 +2,7 @@
   <Import Project="..\..\netfx.props" />
 
   <PropertyGroup>
-    <TargetFramework>netstandard1.1</TargetFramework>
+    <TargetFrameworks>netstandard1.1;net452</TargetFrameworks>
     <authors>Trond Arne Bråthen</authors>
     <owners>Trond Arne Bråthen</owners>
     <PackageId>BinaryEncoding</PackageId>
