--- a/test/BinaryEncoding.Tests/BinaryEncoding.Tests.csproj
+++ b/test/BinaryEncoding.Tests/BinaryEncoding.Tests.csproj
@@ -27,6 +27,14 @@
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1" />
     <PackageReference Include="coverlet.msbuild" Version="2.3.1" />
   </ItemGroup>
+  
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net452' ">
+    <Reference Include="System" />
+    <Reference Include="System.IO" />
+    <Reference Include="System.Runtime" />
+    <Reference Include="System.Runtime.InteropServices" />
+    <Reference Include="System.Threading.Tasks" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\BinaryEncoding\BinaryEncoding.csproj" />
