--- a/appveyor.yml
+++ b/appveyor.yml
@@ -38,47 +38,31 @@ init:
   - ps: Update-AppveyorBuild -Version $env:BUILD_VERSION
   - ps: Write-Host "Build version $env:BUILD_VERSION, NuGet version $env:NUGET_VERSION, Version suffix $env:VERSION_SUFFIX"
 
-before_build:
-  - appveyor-retry dotnet restore -v Minimal --runtime win10-x64
-
 build_script:
   - ps: |
       if ($env:APPVEYOR_REPO_BRANCH -eq "master")
       {
-        dotnet build "src\BinaryEncoding" -c $env:CONFIGURATION
+        dotnet build -c $env:CONFIGURATION
       }
       else
       {
-        dotnet build "src\BinaryEncoding" -c $env:CONFIGURATION --version-suffix $env:VERSION_SUFFIX
-      }
-
-after_build:
-  - ps: |
-      if ($env:APPVEYOR_REPO_BRANCH -eq "master")
-      {
-        dotnet pack "src\BinaryEncoding" -c $env:CONFIGURATION --no-build -o $env:APPVEYOR_BUILD_FOLDER\artifacts
-      }
-      else
-      {
-        dotnet pack "src\BinaryEncoding" -c $env:CONFIGURATION --no-build --version-suffix $env:VERSION_SUFFIX -o $env:APPVEYOR_BUILD_FOLDER\artifacts
+        dotnet build -c $env:CONFIGURATION --version-suffix $env:VERSION_SUFFIX
       }
 
 test: off
 
 test_script:
-  - dotnet test --configuration Debug --framework netcoreapp2.0 --logger trx;logfilename=TestResult.xml --results-directory "%APPVEYOR_BUILD_FOLDER%\test\BinaryEncoding.Tests\TestResults" /p:CollectCoverage=true /p:CoverletOutputFormat=opencover %APPVEYOR_BUILD_FOLDER%\test\BinaryEncoding.Tests\BinaryEncoding.Tests.csproj
-
-after_test:
-  - ps: |
-        $wc = New-Object 'System.Net.WebClient'
-        $wc.UploadFile("https://ci.appveyor.com/api/testresults/xunit/$($env:APPVEYOR_JOB_ID)", (Resolve-Path .\test\BinaryEncoding.Tests\TestResults\TestResult.xml))
+  - dotnet test -c %CONFIGURATION% -f netcoreapp2.2 /p:CollectCoverage=true %APPVEYOR_BUILD_FOLDER%\test\BinaryEncoding.Tests
 
 on_success:
   - choco install codecov
-  - codecov -f "%APPVEYOR_BUILD_FOLDER%\test\BinaryEncoding.Tests\coverage.xml"
+  - codecov -f "%APPVEYOR_BUILD_FOLDER%\test\BinaryEncoding.Tests\coverage.opencover.xml"
 
 artifacts:
-  - path: artifacts\**\*.*
+  - path: '**\*.nupkg'
+    name: nupkg
+  - path: '**\*.snupkg'
+    name: snupkg
 
 cache:
   - '%USERPROFILE%\.local'
