--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,11 +5,11 @@ jobs:
       - image: microsoft/dotnet:1.1-sdk
     steps:
       - checkout
-      - run: dotnet test -f netcoreapp1.1 test/BinaryEncoding.Tests/BinaryEncoding.Tests.csproj
+      - run: dotnet test -f netcoreapp1.1 -c Release test/BinaryEncoding.Tests/BinaryEncoding.Tests.csproj
   build:
     docker:
-      - image: microsoft/dotnet:2.0-sdk
+      - image: microsoft/dotnet:2.2-sdk
     steps:
       - checkout
-      - run: dotnet test -f netcoreapp2.0 test/BinaryEncoding.Tests/BinaryEncoding.Tests.csproj
+      - run: dotnet test -f netcoreapp2.2 -c Release test/BinaryEncoding.Tests/BinaryEncoding.Tests.csproj
 
