--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -52,6 +52,10 @@ stages:
         buildProperties: 'VersionSuffix="$(Build.BuildNumber)"'
         packDirectory: '$(Build.ArtifactStagingDirectory)/packages/prereleases'
         arguments: '--configuration $(buildConfiguration)'
+
+	- script: |
+		temp=$(ls "$(Build.ArtifactStagingDirectory)/packages/prereleases")
+		echo "##vso[task.setvariable variable=version;isOutput=true]$temp | cut -d . -f 2-5"
         
     - publish: '$(Build.ArtifactStagingDirectory)/packages'
       artifact: 'packages'
