--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -56,9 +56,26 @@ stages:
     - script: |
         temp=$(ls "$(Build.ArtifactStagingDirectory)/packages/prereleases")
         echo "##vso[task.setvariable variable=version;isOutput=true]$temp | cut -d . -f 2-5"
+      name: setversion
 
     - publish: '$(Build.ArtifactStagingDirectory)/packages'
       artifact: 'packages'
+
+- stage: 'Test'
+  displayName: 'Run Tests'
+  dependsOn: 'Build'
+  condition: succeeded()
+  jobs:
+  - job:
+    pool:
+      vmImage: 'ubuntu-latest'
+    variables:
+      version: $[ dependencies.Build.outputs['Build.setversion.version'] ]
+    steps:
+    - checkout: none
+    - download: current
+      artifact: 'packages'
+    - script: echo $(version)
         
 #- stage: 'PublishPrereleaseNuGetPackage'
 #  displayName: 'Publish Prerelease NuGet Package'
