--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -79,7 +79,7 @@ stages:
     - download: current
       artifact: 'packages'
     - script: |
-        temp=$(ls "$(Build.ArtifactStagingDirectory)/packages/prereleases")
+        temp=$(ls "$(Pipeline.Workspace)/packages/prereleases")
         echo "##vso[task.setvariable variable=version;isOutput=true]$temp | cut -d . -f 2-5"
     - script: |
         echo "Version: $(version)"
@@ -90,13 +90,19 @@ stages:
         packageType: sdk
         version: 3.1.x
         installationPath: $(Agent.ToolsDirectory)/dotnet
-    - script: dotnet remove reference BinaryEncoding
+    - task: DotNetCoreCLI@2
       displayName: 'Remove package reference'
+      inputs:
+        command: 'custom'
+        projects: 'test/**/*.csproj'
+        custom: 'remove'
+        arguments: 'BinaryEncoding'
     - task: DotNetCoreCLI@2
       displayName: "Add package reference"
       inputs:
-        command: add package
+        command: 'custom'
         projects: 'test/**/*.csproj'
+        custom: 'add package'
         arguments: 'BinaryEncoding --version $(version) --source https://pkgs.dev.azure.com/tabrath/BinaryEncoding/_packaging/binary-encoding/nuget/v3/index.json'
 
     - task: DotNetCoreCLI@2
