--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -80,10 +80,10 @@ stages:
       artifact: 'packages'
     - script: |
         temp=$(ls "$(Pipeline.Workspace)/packages/prereleases")
-        echo "##vso[task.setvariable variable=version;isOutput=true]$temp | cut -d . -f 2-5"
+        temp=$(echo $temp | cut -d . -f 2-5)
+        echo "##vso[task.setvariable variable=version;isOutput=true]$temp"
     - script: |
         echo "Version: $(version)"
-        echo "BuildNumber: $(Build.BuildNumber)"
     - task: UseDotNet@2
       displayName: 'Use .NET Core sdk'
       inputs:
@@ -95,7 +95,7 @@ stages:
       inputs:
         command: 'custom'
         projects: 'test/**/*.csproj'
-        custom: 'remove'
+        custom: 'remove package'
         arguments: 'BinaryEncoding'
     - task: DotNetCoreCLI@2
       displayName: "Add package reference"
